# dmenu

./: .ccls  .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  arg.h  arg.hpp  config.h  config.hpp  config.mk  dmenu.1  dmenu.c  dmenu.c.orig  dmenu.cpp  dmenu.h  dmenu_path.d  drw.c  drw.cpp  drw.h  drw.hpp  stest.cpp  util.cpp  util.h  util.hpp
diffs/: dmenu-alpha-4.9_20190303_190303.diff  dmenu-center-20200111-8cd37e1.diff
